<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Exercise+</string>
    <string name="action_settings">设置</string>
    
    <string name="login_input_user_name">请输入用户名</string>
    <string name="login_input_user_password">请输入密码</string>
    <string name="login_button_login">登录</string>
    <string name="login_button_register">注册</string>
    <string name="login_button_forget_password">忘记密码？</string>

    <string name="register_input_user_password_again">再次输入密码</string>
    <string name="register_input_user_email">请输入电子邮箱</string>
    <string name="register_input_user_checkcode">请输入验证码</string>
    <string name="register_input_user_checkcode_button">发送手机验证码</string>
    <string name="register_input_user_phone">请输入手机号码</string>
  
    <string name="forget_password_find_password_button">发送邮件</string>
    <string name="forget_password_find_password_email">请输入邮件地址</string>
    <string name="forget_email_send">邮件发送成功，请注意查收</string>
    
    <string name="error_login_failed">登录失败，请核查用户名或密码</string>
    <string name="error_register_password_not_equals">两次输入密码不一致，请重新输入</string>
    <string name="error_register_password_null">密码不可为空</string>
    <string name="error_register_user_name_null">用户名不可空</string>
    <string name="error_register_email_address_null">Email地址不可空</string>
    <string name="error_register_user_name_repeat">用户名已被注册，请重新填写</string>
    <string name="error_register_email_repeat">邮箱已被注册，请更换邮箱</string>
    <string name="error_register_checkcode">验证码错误</string>
    <string name="error_forget_email_null">Email地址不可空，请重新填写</string>
    <string name="error_forget_email">邮件发送错误，请确认您的邮件地址</string>
    <string name="error_network">网络异常</string>
    
    <string name="success_register_success">注册成功</string>
    
    <string name="dialog_message_title">提示</string>
    <string name="dialog_text_wait">登陆成功</string>
    
    <string name="tab_register">签到</string>
    <string name="tab_network">朋友圈</string>
    <string name="tab_recommend">推荐</string>
    
    <string name="fragment_register_run">跑步签到</string>
    <string name="fragment_register_updown">俯卧撑签到</string>

    <string name="fragment_recommend_user">好友推荐</string>
    <string name="fragment_recommend_method">运动推荐</string>

    <string name="updown_button_start">开始</string>
    <string name="updown_number">个俯卧撑</string>
    <string name="updown_time">使用时间</string>

    <string name="login_label_username">帐号</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登 录</string>
    <string name="login_status_logging_in">登录中...</string>
    <string name="login_username_hint">Email或手机号</string>


</resources>
