<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_login"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.exercise.UpdownActivity">


    <Button
        android:id="@+id/button_updown_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_style_normal"
        android:text="@string/updown_button_start" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_updown_start"
        android:layout_below="@+id/button_updown_start"
        android:layout_centerHorizontal="true">


        <EditText
            android:id="@+id/editText_updown_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="false"
            android:text="@string/updown_number" >
        </EditText>

        <Button
            android:id="@+id/button_updown_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_style_normal"
            android:text="@string/updown_time" />
    </LinearLayout>

    <Button
        android:id="@+id/button_updown_count"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/linearLayout2"
        android:background="@drawable/btn_style_normal"
        android:clickable="true" />
</RelativeLayout>
